--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   "dependencies": {
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
+    "axios": "^0.24.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.1",
+    "cors": "^2.8.5",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
+    "express": "^4.17.2",
+    "http-proxy-middleware": "^2.0.1",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.8"
   }
