--- a/package.json
+++ b/package.json
@@ -11,19 +11,24 @@
   "dependencies": {
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
+    "@next/bundle-analyzer": "^12.0.7",
+    "antd": "^4.18.2",
     "axios": "^0.24.0",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.1",
     "cors": "^2.8.5",
+    "css-minimizer-webpack-plugin": "^3.3.1",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
     "express": "^4.17.2",
     "http-proxy-middleware": "^2.0.1",
     "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.8"
+    "tailwindcss": "^3.0.8",
+    "terser-webpack-plugin": "^5.3.0"
   }
 }
