--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next/bundle-analyzer": "^12.0.7",
     "antd": "^4.18.2",
     "axios": "^0.24.0",
+    "dayjs": "^1.10.7",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
