--- a/package.json
+++ b/package.json
@@ -22,12 +22,11 @@
   "devDependencies": {
     "@next/bundle-analyzer": "^12.0.7",
     "autoprefixer": "^10.4.1",
+    "clean-css": "^5.2.2",
     "cors": "^2.8.5",
     "css-minimizer-webpack-plugin": "^3.3.1",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
-    "express": "^4.17.2",
-    "http-proxy-middleware": "^2.0.1",
     "postcss": "^8.4.5",
     "terser-webpack-plugin": "^5.3.0"
   }
