--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "tailwindcss": "^3.0.8"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.7",
+    "@babel/plugin-transform-runtime": "^7.16.7",
     "@next/bundle-analyzer": "^12.0.7",
     "autoprefixer": "^10.4.1",
     "clean-css": "^5.2.2",
