--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "eslint-config-next": "12.0.7",
     "postcss": "^8.4.5",
     "terser-webpack-plugin": "^5.3.0"
+  },
+  "engines": {
+    "node": ">=16"
   }
 }
