--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/plugin-transform-runtime": "^7.16.7",
     "@next/bundle-analyzer": "^12.0.7",
     "autoprefixer": "^10.4.1",
+    "babel-eslint": "^10.1.0",
     "clean-css": "^5.2.2",
     "cors": "^2.8.5",
     "css-minimizer-webpack-plugin": "^3.3.1",
